<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team_uganda.ieltsassistor.IeltsCalculator"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_know_your_band_score"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textAppearance="@color/colorPrimaryDark"
        android:background="#a40062" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/listening" />

    <EditText
        android:id="@+id/listeningScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="3-40"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/reading" />

    <EditText
        android:id="@+id/readingScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="3-40"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/writing"
        android:layout_weight="1"/>
    <Spinner
        android:id="@+id/select_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

    </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speaking"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/select_score_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

        </Spinner>

    </LinearLayout>

    <Button
        android:text="Calculate Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calc" />

</LinearLayout>
